[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttest"
dynamic = ["version"]
description = "A pytest-like testing framework for AI agents and prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "AgentTest Contributors"},
]
keywords = ["ai", "testing", "agents", "llm", "pytest", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "nltk>=3.8",
    "rouge-score>=0.1.2",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.15.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-committers-plugin-2>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-redirects>=1.2.0",
    "pymdown-extensions>=10.0.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
]
llamaindex = [
    "llama-index>=0.9.0",
]
all = [
    "agenttest[dev,docs,langchain,llamaindex]",
]

[project.urls]
Homepage = "https://github.com/agenttest-ai/agenttest"
Documentation = "https://agenttest.readthedocs.io"
Repository = "https://github.com/agenttest-ai/agenttest"
Issues = "https://github.com/agenttest-ai/agenttest/issues"

[project.scripts]
agenttest = "agent_test.cli:app"

[tool.hatch.version]
path = "agent_test/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["agent_test"]

[tool.hatch.build.targets.sdist]
include = [
    "/agent_test",
    "/tests",
    "/docs",
    "/examples",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 